<resources>
    <string name="app_name">RutinApp</string>

    <!--SingUpActivity y SingInActivity-->
    <string name="registerName">Nombre</string>
    <string name="registerEmail">Email</string>
    <string name="registerPsswrd">Contraseña</string>
    <string name="registerSignUp">Registrar</string>
    <string name="registerSignIn">Acceder a mi cuenta</string>
    <string name="loginLogIn">Iniciar Sesión</string>
    <string name="etHeightLogUp">Altura</string>
    <string name="etPassword2LogUp">Repite la contraseña</string>
    <string name="etSubNameLogUp">Apellidos</string>

    <!--Main-->
    <string name="btWorkoutsMain">VER EJERCICIOS</string>
    <string name="btNewWorkoutMain">CREAR RUTINA</string>
    <string name="btEditWorkoutMain">MODIFICAR RUTINA</string>
    <string name="btDelWorkoutMain">ELIMINAR RUTINA</string>
    <string name="btSeeWorkoutMain">VER RUTINAS</string>

    <!--Menu-->
    <string name="btMenuItemLogOut">Cerrar Sesión</string>
    <string name="btMenuItemHome">Inicio</string>
    <string name="btMenuItemProfile">Perfil</string>
    <string name="btMenuItemAboutUs">Sobre Nosotros</string>

    <!--item_workouts-->
    <string name="tvNameWorkouts">Ejercicio</string>
    <string name="tvGroupWorkouts">Músculo</string>

    <!--WorkoutsDetails-->
    <string name="tvNameDetails">Nombre:</string>
    <string name="tvGroupDetails">Grupo:</string>
    <string name="tvDescriptionDetails">Descripción:</string>

    <!--AboutUs-->
    <string name="tvTitleAboutUs">¿QUIENES SOMOS?</string>
    <string name="tvAutorTitleAboutUs">Autor:</string>
    <string name="tvDescriptionTitleAboutUs">Descripción:</string>
    <string name="tvAddressTitleAboutUs">Dirección:</string>
    <string name="tvNumPhoneTitleAboutUs">Teléfono:</string>
    <string name="tvCenterTitleAboutUs">Centro:</string>

    <!--Profile-->
    <string name="tvText">Texto</string>
    <string name="tvTittleProfile">PERFIL</string>
    <string name="tvTitleNameProfile">Nombre:</string>
    <string name="tvTitleSubNameProfile">Apellidos:</string>
    <string name="tvTitleEmailProfile">Correo:</string>



</resources>
