<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:padding="20dp">


    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logus"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/etEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/registerEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/registerPsswrd"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btLogInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/loginLogIn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btSignUpLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/registerSignUp"
            android:textColor="@android:color/white" />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>